--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,6 +1,6 @@
 ---
 
-- id: commit-msg-spellcheck
+- id: spellcheck
   name: PreCommit Spell Check
   description: Spell checks changes in files which you are about to commit.
   entry: hooks/spellcheck.sh
