Updates always_run for spellcheck to true

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -5,3 +5,4 @@
   description: Spell checks changes in files which you are about to commit.
   entry: hooks/spellcheck.sh
   language: script
+  always_run: true
